core/unpackaged/main/default/objects/dlrs__DeclarativeLookupRollupSummaries__c/dlrs__DeclarativeLookupRollupSummaries__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Declarative Lookup Rollup Summaries</label>
</CustomObject>