core/unpackaged/main/default/objects/dlrs__DeclarativeLookupRollupSummaries__c/fields/dlrs__DisableDLRSGlobally__c.field-meta.xml
<CustomField>
    <fullName>dlrs__DisableDLRSGlobally__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turns off all DLRS calculations</description>
    <inlineHelpText>Disable DLRS calculations, useful for bulk loading or other large-scale actions</inlineHelpText>
    <label>Disable DLRS Globally</label>
    <type>Checkbox</type>
</CustomField>