core/unpackaged/main/default/objects/dlrs__DeclarativeLookupRollupSummaries__c/fields/dlrs__DisableParentDMLCheck__c.field-meta.xml
<CustomField>
    <fullName>dlrs__DisableParentDMLCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turns off the DML guard that queries the parent record before DML to filter out records that wouldn't actually change the parent's held rollup value. Should be used if you're tight on SQL queries and know that your actions will almost always cause rollup value changes.</description>
    <inlineHelpText>Disable the feature to query and compare the parent before executing DML.</inlineHelpText>
    <label>Disable Parent DML Check</label>
    <type>Checkbox</type>
</CustomField>