core/unpackaged/main/default/objects/dlrs__DeclarativeLookupRollupSummaries__c/fields/dlrs__DisableProblemEmails__c.field-meta.xml
<CustomField>
    <fullName>dlrs__DisableProblemEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stop DLRS from sending emails when unexpected problems occur during calculation</description>
    <inlineHelpText>Disable calculation problem emails</inlineHelpText>
    <label>Disable Problem Emails</label>
    <type>Checkbox</type>
</CustomField>