core/unpackaged/main/default/objects/dlrs__DeclarativeLookupRollupSummaries__c/fields/dlrs__HideManageLookupRollupSummariesInfo__c.field-meta.xml
<CustomField>
    <fullName>dlrs__HideManageLookupRollupSummariesInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Manage Lookup Rollup Summaries Info</label>
    <type>Checkbox</type>
</CustomField>