core/unpackaged/main/default/objects/dlrs__DeclarativeLookupRollupSummaries__c/fields/dlrs__ScheduledJobScopeSize__c.field-meta.xml
<CustomField>
    <fullName>dlrs__ScheduledJobScopeSize__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Scheduled Job Scope Size</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>